Added dates to blog posts

--- a/style.scss
+++ b/style.scss
@@ -181,6 +181,10 @@ p {
     font-size: 1.2em; // make a bit easier to read on mobile
 }
 
+.blog-time {
+    color: $brown;
+}
+
 
 //////FOOTER/CONTACT BAR
 footer {
